--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,12 @@
     "helmet": "^4.4.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "pg": "^8.5.1"
+    "eslint-plugin-import": "^2.22.1"
   }
 }
