--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@draft-js-plugins/buttons": "^4.1.0",
+    "@draft-js-plugins/editor": "^4.1.0",
+    "@draft-js-plugins/inline-toolbar": "^4.1.1",
+    "@draft-js-plugins/static-toolbar": "^4.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -14,6 +18,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "draft-js": "^0.11.7",
     "history": "^5.0.0",
     "immer": "^8.0.1",
     "node-sass": "^5.0.0",
@@ -23,7 +28,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^8.0.27",
-    "reactstrap": "^8.9.0"
+    "reactstrap": "^8.9.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
