--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,8 @@
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-scroll-to": "^3.0.0-beta.6",
     "react-spring": "^8.0.27",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5"
@@ -55,6 +57,14 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.2.3"
   }
 }
