--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "history": "^5.0.0",
     "immer": "^8.0.1",
     "node-sass": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
