added styled components to nav and social row

--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "react-transition-group": "^2.9.0",
     "reactstrap": "^8.9.0",
     "redraft": "^0.10.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
