--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.6.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "framer-motion": "^4.0.0",
     "hamburger-react": "^2.4.0",
     "history": "^5.0.0",
     "immer": "^8.0.1",
