--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-spinners": "^0.10.6",
     "react-spring": "^8.0.27",
     "react-transition-group": "^2.9.0",
     "reactstrap": "^8.9.0",
