--- a/package.json
+++ b/package.json
@@ -1,65 +1,31 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:8080/",
-  "dependencies": {
-    "@draft-js-plugins/buttons": "^4.1.0",
-    "@draft-js-plugins/editor": "^4.1.0",
-    "@draft-js-plugins/inline-toolbar": "^4.1.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "draft-js": "^0.11.7",
-    "draft-js-export-html": "^1.4.1",
-    "framer-motion": "^4.0.0",
-    "hamburger-react": "^2.4.0",
-    "history": "^5.0.0",
-    "immer": "^8.0.1",
-    "moment": "^2.29.1",
-    "node-sass": "^5.0.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-rotating-text": "^1.4.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-scroll": "^1.8.2",
-    "react-spinners": "^0.10.6",
-    "react-spring": "^8.0.27",
-    "react-transition-group": "^2.9.0",
-    "reactstrap": "^8.9.0",
-    "redraft": "^0.10.2",
-    "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
-  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Kye's Portfolio backend",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "typescript": "^4.2.3"
+  "keywords": [
+    "node js",
+    "express",
+    "jwt",
+    "authentication",
+    "postgresql"
+  ],
+  "author": "bezkoder",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.5.0",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.1"
   }
 }
