--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/server.js",
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [
     "node js",
@@ -14,7 +15,10 @@
     "authentication",
     "postgresql"
   ],
-  "author": "bezkoder",
+  "engines": {
+  "node": "14.15.3"
+  },
+  "author": "kyledarrion",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
