--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.3"
   }
 }
