--- a/firebase.json
+++ b/firebase.json
@@ -8,18 +8,15 @@
     ],
     "rewrites": [
       {
-        "source": "/",
-        "destination": "/index.html"
-      },
-      {
         "source": "/api",
-        "function": "api"
+        "function": "app"
       }
     ]
   },
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    ],
+    "source": "functions"
   }
 }
