--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^8.9.0",
-    "styled-components": "^5.2.1"
+    "reactstrap": "^8.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
