--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "sequelize": "^6.5.1"
   },
   "devDependencies": {
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.1",
     "typescript": "^4.2.3"
   }
 }
